# AlignImg

./: LICENSE  MANIFEST.in  README.md  README_API.md  align_api.py  align_batch_cpu.py  align_multicore.py  align_single.py  align_utils.py  align_utils_gpu.py  alignimg_api.py  pyproject.toml  test_accuracy.py  test_align_single_accuracy.py  test_alignment_minimal.py  test_gpu_pipeline.py  test_realdata.py
examples/: benchmark_cpu_optimization.py  test_realdata.py
prototypes/: align_single.py
src/: align_utils.py  alignimg_api.py
src/alignimg/: __init__.py  _batch_cpu.py  _multicore.py  _utils.py  api.py  batch_cpu.py  multicore.py  utils.py
tests/: test_api_smoke.py  test_batch_scan_cpu.py  test_io_contract.py
